# atsc

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  NOTICE.TXT  README.md  plot_comparison.sh  plot_data.sh  run_demo.sh  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_and_test.yaml  release.yaml
atsc/: Cargo.toml
atsc/benches/: fft_bench.rs  polynomial_bench.rs
atsc/demo/: README.md  comparison-error-1-csv-iowait.html  comparison-error-1-heap.html  comparison-error-1-memory.html  comparison-error-3-csv-iowait.html  comparison-error-3-heap.html  comparison-error-3-memory.html  run_demo csv.sh  run_demo.sh  run_demo_csv.sh
atsc/release/: build_release.sh  is_releasable.sh
atsc/src/: csv.rs  data.rs  header.rs  lib.rs  main.rs
atsc/src/compressor/: constant.rs  fft.rs  mod.rs  noop.rs  polynomial.rs  rle.rs  vsri.rs
atsc/src/frame/: mod.rs
atsc/src/optimizer/: mod.rs  utils.rs
atsc/src/utils/readers/: mod.rs
atsc/tests/: README.md  e2e.rs  integration_test.rs
atsc/tests/csv/: cpu_utilization.csv  cpu_utilization_no_headers_only_values.csv  iowait.csv
atsc/tests/wbros/: memory_used.wbro  uptime.wbro
brro-compressor/: Cargo.toml  TODO.md
brro-compressor/benches/: constant_bench.rs  fft_bench.rs  polynomial_bench.rs
brro-compressor/demo/: run_demo.sh
brro-compressor/demo/wbro_files/: ic_node_client_request_write_e2ca8532-4650-4d6f-9092-0231a65d0bc5.prometheus.monitoring.instaclustr.com_443_2023-07-12.wbro  ic_node_disk_available_3bf8ed63-5d06-49c3-863c-bf315bce76e5.prometheus.monitoring.instaclustr.com_443_2023-07-11.wbro  ic_node_heapmemorycommitted_bytes_3bf8ed63-5d06-49c3-863c-bf315bce76e5.prometheus.monitoring.instaclustr.com_443_2023-07-12.wbro  ic_node_heapmemoryused_bytes_3bf8ed63-5d06-49c3-863c-bf315bce76e5.prometheus.monitoring.instaclustr.com_443_2023-07-12.wbro
brro-compressor/src/: compare.rs  data.rs  header.rs  lib.rs  main.rs
brro-compressor/src/compressor/: constant.rs  fft.rs  idw.rs  mod.rs  noop.rs  polynomial.rs  vsri.rs
brro-compressor/src/frame/: frames_manager.rs  mod.rs
brro-compressor/src/optimizer/: mod.rs  optimizer.rs  processors.rs  utils.rs
brro-compressor/src/preprocessor/: mod.rs
brro-compressor/src/types/: metric_tag.rs  mod.rs
brro-compressor/src/utils/: error.rs  file_type_detector.rs  mod.rs  reader.rs  writer.rs
brro-compressor/src/utils/readers/: bro_reader.rs  mod.rs  wav_reader.rs
brro-compressor/src/utils/writers/: bro_writer.rs  mod.rs  wav_writer.rs
brro-compressor/tests/: e2e.rs  integration_test.rs
brro-compressor/tests/bench/: constant_bench.rs  fft_bench.rs  noop_bench.rs
brro-compressor/tests/wbros/: go_gc_duration_count.wbro  go_gc_heap_goal_bytes.wbro  io_wait.wbro
csv-compressor/: Cargo.toml
csv-compressor/src/: csv.rs  main.rs  metric.rs
docs/: Usage.md  design.md  getting-started.md  usage.md
lib_vsri/: Cargo.toml  README.md
lib_vsri/src/: lib.rs  vsri.rs
matlab/: error_calc.m  process_ts.m  process_ts2.m  remove_nan.m  supersample_signal.m
optimizer/: Cargo.toml
optimizer/src/: main.rs
paper/: BRRO.md
prometheus-remote/: Cargo.toml
prometheus-remote/src/: flac_reader.rs  fs_utils.rs  lib_vsri.rs  main.rs  wav_writer.rs
publications/latex_source/: refs.bib  whitepaper.tex
src/: WavWriter.rs  flac_reader.rs  fs_utils.rs  lib_vsri.rs  lib_wavwriter.rs  main.rs  wav_writer.rs
tools/: Cargo.toml
vsri/: Cargo.toml  README.md
vsri/src/: lib.rs
wavbrro/: Cargo.toml  README.md
wavbrro/src/: lib.rs  read.rs  wavbrro.rs  write.rs
