[workspace]
members = [
    "brro-compressor",
    "optimizer",
    "prometheus-remote",
    "tools",
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1

[workspace.dependencies]
sysinfo = "0.29.0"
hound = "3.5"
chrono = "0.4.26"
claxon = "0.4.3"
warp = "0.3.5"
tokio = { version= "1", features = ["full"] }
symphonia = { version = "0.5.3", features = ["flac"] }
prom-remote-api = { version = "0.3.0", features = ["warp"] }
async-trait = "0.1.71"
env_logger = "0.10.0"
log = "0.4.0"
clap = {version = "4.3.14", features = ["derive"] }
regex = "1.9.1"
median = "0.3.2"
dtw_rs = "0.9.5"