[workspace]
members = [
    "brro-compressor",
    "optimizer",
    "prometheus-remote",
    "tools",
    "wavbrro",
    "vsri",
    "csv-compressor"
]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1

[workspace.dependencies]
clap = {version = "4.3.14", features = ["derive"] }
