[package]
name = "atsc"
version = "0.7.0"
authors = ["Carlos Rolo <carlos.rolo@netapp.com>"]
edition = "2021"
license = "Apache-2.0"
description = "An Advanced Time-Series Compressor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.11.0"
log = "0.4.0"
clap = {version = "4.3.14", features = ["derive"] }
bincode = "2.0.0-rc.3"
rustfft = "6.1.0"
tempfile = "3.2"
average = "0.15.1"
regex = "1.9.1"
hound = "3.5"
median = "0.3.2"
wavbrro = { path = "../wavbrro" }
splines = "4.3.0"
inverse_distance_weight = "0.1.1"
num-traits = "0.2"
csv = "1.3.1"
thiserror = "2.0.3"

[dev-dependencies]
criterion = "0.5.1"
rand ="0.8.5"

[[bench]]
name = "fft_bench"
harness= false

[[bench]]
name = "polynomial_bench"
harness= false
