[package]
name = "brro-compressor"
version = "0.1.0"
authors = ["Carlos Rolo <carlos.rolo@netapp.com>"]
edition = "2021"
license = "Apache-2.0"
description = "An Advanced Time-Series Compressor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.10.0"
log = "0.4.0"
clap = {version = "4.3.14", features = ["derive"] }
bincode = "2.0.0-rc.3"