[package]
name = "brro-compressor"
version = "0.2.1"
authors = ["Carlos Rolo <carlos.rolo@netapp.com>"]
edition = "2021"
license = "Apache-2.0"
description = "An Advanced Time-Series Compressor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.10.0"
log = "0.4.0"
clap = {version = "4.3.14", features = ["derive"] }
bincode = "2.0.0-rc.3"
rustfft = "6.1.0"
tempfile = "3.2"
average = "0.14.1"
regex = "1.9.1"
hound = "3.5"
median = "0.3.2"
criterion ="0.5.1"
wavbrro = { path = "../wavbrro" }