[package]
name = "csv-compressor"
version = "0.1.0"
edition = "2021"
description = "Utilizes brro-compressor functionalities to compress CSV formatted data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brro-compressor = { version = "0.5.0", path = "../brro-compressor" }
clap = { workspace = true, features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.171", features = ["derive"] }
wavbrro = { version = "0.1.0", path = "../wavbrro" }
log = "0.4.19"
env_logger = "0.10.0"
vsri = { version = "0.1.0", path = "../vsri" }
