[package]
name = "wavbrro"
version = "0.1.0"
authors = ["Carlos Rolo <carlos.rolo@netapp.com>"]
edition = "2021"
license = "Apache-2.0"
description = "An adaptation of the WAV format for use by the BRRO compressor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.10.0"
log = "0.4.0"
rkyv = { version = "0.7.42", features = ["validation"] }